--- a/Odin-lesson/index.html
+++ b/Odin-lesson/index.html
@@ -81,14 +81,17 @@
                 let the information sink in before moving on. </i>
         </li>
         <li>Reproduce what you've been taught.
-            <i>Try building something using the information you've just learned, and than build again
+            <i>Try building something using the information you've just learned, 
+                and than build again
                  (the repetition will help you remember what you've leaned)</i>
         </li>
+        <li>Use your resources. <i> ( it's okay to return to the reading material and websites
+             you've read in the past if you've forgotten how to do something. )</i></li>
     </ul>
 
-<git log --first commit message-- "6 11 2022">
+
     
-</git>
+
 
 
 
